<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--suppress CheckTagEmptyBody -->
    <item android:title="">
        <menu></menu>
    </item>

    <group android:id="@+id/drawerTop"
        android:checkableBehavior="none">
            <item
                android:id="@+id/drawer_notifications"
                android:icon="@drawable/ic_notifications"
                android:title="@string/notifications" />
            <item
                android:id="@+id/drawer_account"
                android:icon="@drawable/ic_account_circle"
                android:title="@string/account" />
    </group>


    <group android:checkableBehavior="none"
        android:id="@+id/drawerBottom">

    <item
        android:id="@+id/drawer_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings" />

    <item
        android:id="@+id/drawer_help"
        android:icon="@drawable/ic_help"
        android:title="@string/help" />

    <item
        android:id="@+id/drawer_signout"
        android:icon="@drawable/ic_logout"
        android:title="@string/sign_out" />
    </group>
</menu>