<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".login.LoginActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/scrim_background"
        android:clickable="true"
        android:elevation="30dp"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/login_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="30dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/login_outwire_logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/create_account_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook_sign_button">

        <TextView
            android:id="@+id/dont_have_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/don_t_have_an_account"
            android:textSize="@dimen/subTextSize" />

        <TextView
            android:id="@+id/create_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/create_account"
            android:textColor="@color/clickable_subtext_blue"
            android:textSize="@dimen/subTextSize" />

    </LinearLayout>

    <EditText
        android:id="@+id/login_user_credential"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="Username, Email"
        android:ems="16"
        android:hint="@string/email"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_outwire_logo"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Password"
        android:ems="16"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_user_credential" />

    <com.outwire.custom.views.OutWireSignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="@dimen/sign_button_width"
        android:layout_height="@dimen/sign_button_height"
        android:layout_marginTop="48dp"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        app:text="@string/sign_in"
        app:text_color="?attr/colorOnPrimary"
        app:text_size="@dimen/sign_button_text" />

    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:elevation="2dp"
        android:focusable="true"
        android:text="@string/forgot_your_password"
        android:textColor="@color/clickable_subtext_blue"
        android:textSize="@dimen/subTextSize"
        app:layout_constraintEnd_toEndOf="@+id/login_password"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/or_sign_in_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/google_sign_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button">

        <View
            android:id="@+id/separator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/separator_grey"
            android:contentDescription="@string/sign_in_options_separator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/or_sign_in_with_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/or_sign_in_with_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_sign_in_with"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/separator2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/separator_grey"
            android:contentDescription="@string/sign_in_options_separator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/or_sign_in_with_text"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.outwire.custom.views.OutWireSignInButton
        android:id="@+id/google_sign_button"
        android:layout_width="@dimen/sign_button_width"
        android:layout_height="@dimen/sign_button_height"
        android:layout_marginTop="64dp"
        android:backgroundTint="?attr/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
        app:src_logo="@drawable/google_logo"
        app:text="@string/google"
        app:text_color="?attr/colorOnSecondary" />


    <com.outwire.custom.views.OutWireSignInButton
        android:id="@+id/facebook_sign_button"
        android:layout_width="@dimen/sign_button_width"
        android:layout_height="@dimen/sign_button_height"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/facebook_blue"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_sign_button"
        app:src_logo="@drawable/fb_logo"
        app:text="@string/facebook"
        app:text_color="@color/white"
        app:text_size="@dimen/sign_button_text" />


</androidx.constraintlayout.widget.ConstraintLayout>